--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-icons": "^1.0.0-alpha",
     "hammerjs": "^2.0.8",
+    "ngx-google-places-autocomplete": "^2.0.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
