--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.5",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.4.1",
-    "bootstrap-icons": "^1.0.0-alpha",
+    "bootstrap-icons": "^1.0.0-alpha2",
     "hammerjs": "^2.0.8",
     "ngx-google-places-autocomplete": "^2.0.4",
     "popper.js": "^1.16.0",
